随忆记：fix